2000-09-12  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Switch to GParam and use the boilerplate
	macros.

2000-09-12  Martin Baulig  <baulig@suse.de>

	* selector-demo.c: Added GnomeIconEntry.

2000-09-12  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Added "get_filename" signal.
	(gnome_selector_get_filename): New function.
	(gnome_selector_set_filename): Allow the filename to be NULL.

	* gnome-selector.c (gnome_selector_class_init): Added the missing
	"changed" signal.
	(get_filename_handler): Default is to use "get_entry_text".
	(set_filename_handler): Allow the filename to be NULL.

2000-09-11  Martin Baulig  <baulig@suse.de>

	* gnome-icon-selector.c (icon_selected_cb): New callback function;
	emits the "selection_changed" signal on the GnomeSelector.
	(gnome_icon_selector_construct): Connect the `icon_selected_cb' to
	the "select_icon" and "unselect_icon" signals of the GnomeIconList.

	* gnome-selector.h (GnomeSelector): Added "selection_changed" signal.

Sun Sep 10 19:47:07 2000  George Lebl <jirka@5z.com>

	* gnome-href.[ch]: Switch to GParam, and bunches of reformatting
	  to more match standard gnome style.

	* gnome-animator.c: use PARAM_ instead of ARG_ for the enum and
	  match up the names and remove an unused enum value.

Sun Sep 10 03:29:56 2000  George Lebl <jirka@5z.com>

	* gnome-dateedit.c:  Make sure that input to gtkcalendar is legal
	  to avoid warnings.  Also use gtk_widget_size_request for the
	  calendar to make sure that the size is always querried.

	* gnome-druid.c:  When going to the next page find the next
	  visible page, rather then just any old next page.

2000-09-06  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Removed all references to actual files and
	directories; both the file and directory lists may contain arbitrary
	text entries which don't need to be actual file or directory names.
	This is very important to allow us to subclass GnomeSelector for things